syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.clh.bookstore.author";

service AuthorService {
  rpc CreateAuthor(CreateAuthorRequest) returns (CreateAuthorResponse);
  rpc GetAllAuthors(GetAllAuthorsRequest) returns (stream AuthorEntity);
  rpc GetAuthorById(AuthorByIdRequest) returns (AuthorEntity);
  rpc SetAuthorAvatarUrlById(AuthorAvatarUrlRequest) returns (AuthorEntity);
}

message AuthorAvatarUrlRequest{
  int64 author_id = 1;
  string avatar_url = 2;
}

message AuthorEntity {
  int64 author_id = 1;
  string name = 2;
  string biography = 3;
  string avatar_url = 4;
}

message AuthorByIdRequest{
  int64 author_id = 1;
}

message CreateAuthorRequest {
  string name = 1;
  string biography = 2;
  string avatar_url = 3;
}

message CreateAuthorResponse {
  int64 author_id = 1;
  string name = 2;
  string biography = 3;
}

message GetAllAuthorsRequest {
}